Refactored entity relations. Still buggy but good so far

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port = 8080
 
+spring.datasource.url=jdbc:postgresql://172.21.200.55:5432/bi_analytics_db
+spring.datasource.username=aml_ml
+spring.datasource.password=d^qEpVUO^e0CAio!0
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
