--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,7 @@ spring.datasource.password=d^qEpVUO^e0CAio!0
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+# JPA ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
-
 server.ssl.enabled=false
 spring.main.allow-bean-definition-overriding=true
